@@ -153,7 +153,8 @@ int
 cl_app::run(void)
 {
   int done= 0;
-
+  unsigned  input_check_skip = 0;
+  
   while (!done &&
          going)
     {
@@ -161,10 +162,16 @@ cl_app::run(void)
         {
           if (sim->state & SIM_GO)
             {
-              if (commander->input_avail())
+              if ((!input_check_skip) && (commander->input_avail())) {
                 done= commander->proc_input();
-              else
+		
+		// run a few steps before checking for more input
+		++input_check_skip;
+              } else {
                 sim->step();
+		
+		input_check_skip = (input_check_skip + 1) % 50;
+	      }
             }
           else
             {
